# architecture-decision-records-dj

./: .bandit.yml  .dockerignore  .flake8  .gitignore  .markdownlint.json  404.html  LICENSE  README.md  code.code-workspace  index.html  manage.py  mkdocs.yml  packages.req  pyproject.toml  sitemap.xml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
admin/http/: index.html
admin/install/: index.html
admin/selinux-troubleshooting/: index.html
admin/service/: index.html
admin/uninstall/: index.html
admin/upgrade/: index.html
architecture_decision_records/: __init__.py
architecture_decision_records/core/: __init__.py  cli.py  settings.py  settings_funcs.py  urls.py  wsgi.py
architecture_decision_records/core/management/commands/: post_install.py  start.py
architecture_decision_records/core/runner/: __init__.py  importer.py  runner.py  settings.py
architecture_decision_records/core/templates/: 404.html  _base.html  _nav.html  adr_config.py.j2
architecture_decision_records/core/tests/: test_cli.py
architecture_decision_records/decisions/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
architecture_decision_records/decisions/forms/: comment_form.py  decision_form.py
architecture_decision_records/decisions/migrations/: 0001_initial.py  0002_status_data.py  0003_decision.py  0004_revisioncomment.py
architecture_decision_records/decisions/templates/: _comment.html  about.html  decision.html  decision_edit.html  decision_new.html  decision_to_pdf.html  home.html
architecture_decision_records/decisions/tests/: test_about_page.py  test_home_page.py  test_models.py
architecture_decision_records/project-static/css/: 404.css  base.css
architecture_decision_records/project-static/js/: 404.js  comment.js  pdf.js
architecture_decision_records/users/: __init__.py  admin.py  apps.py  forms.py  models.py
architecture_decision_records/users/migrations/: 0001_initial.py
architecture_decision_records/users/tests/: test_user_model.py
configuration/: index.html
configuration/ldap/: index.html
configuration/required-settings/: index.html
dev/contributing/: index.html
dev/design/: index.html
dev/dev_environment/: index.html
dev/extending/: index.html
development/: .zshrc  Dockerfile  adr_config.py  creds.example.env  dev.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.requirements.yml  users.ldif
docs/: index.md
docs/admin/: http.md  install.md  selinux-troubleshooting.md  service.md  uninstall.md  upgrade.md
docs/configuration/: index.md  ldap.md  required-settings.md
docs/css/: extra.css
docs/dev/: design.md  dev_environment.md
docs/user/: app_overview.md  external_interactions.md
search/: search_index.json
seed/: 00-auth.json  01-decisions.json  02-revision-comments.json
user/app_getting_started/: index.html
user/app_overview/: index.html
user/app_use_cases/: index.html
user/external_interactions/: index.html
user/faq/: index.html
(+1 files in other folders)
